--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,90 @@
-/* your code here */
+.media-icons {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.media-icons a {
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+  line-height: 50px;
+  border-radius: 50%;
+  text-align: center;
+  color: white;
+  font-size: 24px;
+  transition: all 0.3s ease;
+}
+
+.media-icons a:nth-child(1) {
+  background: #3b5998; /* Facebook */
+}
+
+.media-icons a:nth-child(2) {
+  background: #1da1f2; /* Twitter */
+}
+
+.media-icons a:nth-child(3) {
+  background: #e1306c; /* Instagram */
+}
+
+.media-icons a:nth-child(4) {
+  background: #0077b5; /* LinkedIn */
+}
+
+.media-icons a:nth-child(5) {
+  background: #ff0000; /* YouTube */
+}
+
+.media-icons a:hover {
+  transform: translateY(-5px);
+  opacity: 0.9;
+}
+.top{
+	display:flex;
+	justify-content:space-between;
+	align-items:center;
+	padding:12px;
+}
+.logo-details{
+	font-size:30px;
+	color:white;
+}
+.content{
+	background-color:black;
+}
+.link-boxes{
+	display:flex;
+	gap:120px;
+	flex-wrap:wrap;
+	padding:12px;
+}
+p{
+	color:white;
+}
+li{
+	color:#BEBEBE;
+}
+ul>li{
+	list-style-type:none;
+	position:relative;
+	left:-40px;
+}
+.link-boxes>div>p::after{
+	content:'';
+	display:block;
+	height:2px;
+	width:30px;
+	background-color:white;
+	margin-top:5px;
+}
+.bottom-details{
+	display:flex;
+	justify-content:space-between;
+	background-color:#2C303A;
+	padding:12px;
+}
+.bottom-details>div{
+	color:#ADAEB3;
+}
